k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file compose.yaml convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: backend
