k8s/db-storage.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    app: db
    role: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
      role: service
  serviceName: db
  template:
    metadata:
      labels:
        app: db
        role: service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: db
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: db
              protocol: TCP
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: 1Gb
              ephemeral-storage: "2Gi"
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
    role: service
spec:
  selector:
    app: db
    role: service
  type: NodePort
  ports:
    - name: db
      port: 5432
      targetPort: 5432
      protocol: TCP
