k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: backend-ingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.dengovie.ingress
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
